Revert "Fixed bottom spacing for all screen sizes"
This reverts commit 99cd560e65426c25a921eb06764d5fdec4a9ffcc.

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -14,10 +14,6 @@
   /* 31-12-2024 */
   /* //......................................  */
 }
-.landing{
-  height: 88vh;
-  align-content: center;
-}
 .landing .css-r0vxuw-MuiSvgIcon-root {
   font-size: 2.1rem;
 }
@@ -432,7 +428,6 @@
       margin-left: 20px;
       margin-top: 70px;
     } */
-
   }
   .landing .namaste-head {
     display: flex;
@@ -455,13 +450,6 @@
     justify-content: center;
   }
 }
-
-@media (max-width: 1024px) and (min-width: 769px) {
-  .landing{
-        height: max-content; 
-  }
-}
-
 @media screen and (min-width: 769px) {
   .landing .logo-sm {
     display: none;
@@ -613,7 +601,6 @@
   }
   .landing .btn-2 {
     width: 260px;
-    height: fit-content;
   }
   .landing main h1 {
     font-size: 48px;
@@ -628,17 +615,7 @@
     padding: 10px;
   }
 }
-
-@media screen and (max-width: 390px){
-  .landing{
-    height: 87vh;
-  }
-}
-
 @media screen and (max-width: 320px) {
-  .landing{
-    height: 87vh;
-  }
   .landing .css-r0vxuw-MuiSvgIcon-root {
     font-size: 1.7rem;
   }
